test: update existing unit test cases